--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1 class="font-sans text-white text-center text-4xl font-bold">Welcome to deploy.coffee!</h1>
                 <p class="font-sans text-white text-center mt-5 text-lg">Deploy a Minecraft server in seconds. Coming soon.</p>
             </div>
-            <p class="font-sans text-neutral-200 text-center mt-5 text-sm mt-auto">© 2023 deploy.coffee</p>
+            <p class="font-sans text-neutral-200 text-center mt-5 text-sm mt-auto mb-2">© 2023 deploy.coffee</p>
         </div>
     </body>
 </html>
